fixed minor view bug that made activities and transport width too small

--- a/frontend/src/components/displayday/DisplayDay.css
+++ b/frontend/src/components/displayday/DisplayDay.css
@@ -77,6 +77,6 @@
     align-items: center;
 }
 
-.div-act-sort {
+.fill-width {
     min-width: 100%;
 }
